# token-source-attribution

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb
src/token_source_attributor/: __init__.py
src/token_source_attributor/attribution/: saliency.py
src/token_source_attributor/data/: data_preprocessing.py  dataset.py  fetch_classification_data.R  fetch_stool_species.R  species_vocab.txt
src/token_source_attributor/inference/: classify.py
src/token_source_attributor/models/: biomgpt.py
src/token_source_attributor/training/: baseline.py  classifier_biomgpt.py  pretrain_biomgpt.py
tests/: test_binning.py  test_data_loading.py  test_masked_nonzero_abundance_bin.py  test_saliency.py
