[project]
name = "token-source-attributor"
version = "0.1.0"
description = "Token-source-aware attribution tools for transformer models."
requires-python = ">=3.10,<3.13"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "numpy",
    "pandas",
    "pytest"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]